the basics are work

--- a/views/Robots/new.ejs
+++ b/views/Robots/new.ejs
@@ -7,7 +7,7 @@
   </head>
   <body>
     <%- include('../partials/_navbar.ejs') %>
-    <h1>Add New Robot</h1>
+    <h1>Add a New Robot </h1>
 
     <form action="/robots" method="POST">
       <label for="robotName">Robot Name:</label>
