--- a/views/Robots/show.ejs
+++ b/views/Robots/show.ejs
@@ -13,7 +13,8 @@
     <h2>Details</h2>
     <p>Mobility: <%= robot.mobility %></p>
     <p>Discription: <%= robot.discription %></p>
-    <p>Robot Image: <%= robot.robotImage %></p>
+    <p>Robot Image: </p>
+    <img src=<%= robot.robotImage %> alt="robor image">
     
 <!-- views/robots/show.ejs -->
 
