--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -13,7 +13,7 @@
       <input type="text" name="username" id="username" />
 
       <label for="age">Age:</label>
-      <input type="text" name="Age" id="Age" />
+      <input type="number" name="age" id="age" />
 
       <label for="schoolName">School Name:</label>
       <input type="text" name="schoolName" id="schoolName" />
