--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/stylesheets/style.css" />
   <title>Document</title>
 </head>
 <body>
   <%- include('./partials/_navbar.ejs') %>
-  <p><a href="/vip-lounge">this is the landing page</a></p>
-  
+  <h1>Welcome to the EcoGuard Robot Competition Registration!</h1>
+  <p>Register your eco-friendly robots by singing up and participate in the competition to showcase your innovations!</p>
+
+  <a href="/robots/yourRobots">My Robots</a>
 
 </body>
 </html>
