--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -2,6 +2,8 @@
 <nav>
   <% if (user) { %>
   <a href="/robots">View all Robots</a>
+  <a href="/robots/new">Add New Robot</a>
+  <a href="/robots/yourRobots">My Robots</a>
   <a href="/auth/sign-out">Sign Out</a>
   <% } else { %>
   <a href="/auth/sign-up">Sign Up</a>
