--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,5 +1,5 @@
 
-<nav>
+<nav class="navbar">
   <% if (user) { %>
   <a href="/robots">View all Robots</a>
   <a href="/robots/new">Add New Robot</a>
@@ -9,3 +9,4 @@
   <a href="/auth/sign-up">Sign Up</a>
   <a href="/auth/sign-in">Sign In</a>
   <% } %>
+</nav>
