--- a/views/Robots/index.ejs
+++ b/views/Robots/index.ejs
@@ -8,18 +8,21 @@
   </head>
   <body>
     <%- include('../partials/_navbar.ejs') %>
-    <h1>Here's all the Robots</h1>
+  
+      <h1>Here's all the Robots</h1>
     
-    <p> Hello <%= user.username%></p>
+      <p class="redtext"> Hello <%= user.username%></p>
+    
     <ul>
       <% robots.forEach((robot) => { %>
       <li>
-        The robot  <%= robot.robotName %> owned by <%= robot.owner.username %>.
-        <a href="/robots/<%= robot._id %>">See Details</a>
+        The robot <span class="bluetext"> <%= robot.robotName %></span> owned by 
+        <span class="bluetext"><%= robot.owner.username %> </span>.
+        <a href="/robots/<%= robot._id %>">Show Details</a>
       </li>
       <% }) %>
     </ul>
-<a href="/robots/winner">See the Top Robot</a>
+<a class="redtext" href="/robots/winner">See the Top Robot</a>
     
   </body>
 </html>
