--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <title>Sign Up</title>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-
+player.js"></script>
   </head>
   <body>
+    <div class="page-container">
+      <div class="cont left-cont">
+    <div class="form-page">
     <h1>Create a new account!</h1>
-    <form action="/auth/sign-up" method="POST">
+    <form action="/auth/sign-up" method="POST" class="robot-form">
 
       <label for="username">Username:</label>
       <input type="text" name="username" id="username" />
@@ -27,5 +32,18 @@
       
       <button type="submit">Sign up</button>
     </form>
+    </div>
+    </div>
+     <div class="cont right-cont">
+      <lottie-player
+src="/animation/robot.json"
+background="transparent"
+speed="1"
+style="width: 300px; height: 300px;"
+loop
+autoplay>
+</lottie-player>
+    </div>
+    </div>  
   </body>
 </html>
