--- a/views/Robots/new.ejs
+++ b/views/Robots/new.ejs
@@ -17,9 +17,10 @@
 
       <label for="mobility">Mobility:</label>
       <select name="mobility" id="mobility" >
-        <option value="Fixed">Fixed</option>
-        <option value="Mobile">Mobile</option>
+        <option >Fixed</option>
+        <option >Mobile</option>
        </select> 
+
       <label for="discription">Discription:</label>
       <textarea name="discription" id="discription" ></textarea>
 
